# torch_migraphx

./: .Dockerfile.swp  .gitignore  CONTRIBUTING.md  Dockerfile  Jenkinsfile  LICENSE  README.md  SECURITY.md  build_image.sh  build_whl.sh  ci.Dockerfile  test  test.py  test_gather_final.py
.github/: CODEOWNERS
.github/workflows/: ci.yaml  publish.yml  torchbench.yaml
ci/: Jenkinsfile.validate-pypi  base.Dockerfile  build.Dockerfile  build_ci_image.sh  build_sd.sh  build_whl.sh  ci.Dockerfile  excludes.params  soname_excludes.params
ci/docker/: Dockerfile
ci/wheel/: build.Dockerfile  build_whl.sh  excludes.params
docker/: README.md  dev.Dockerfile  rel.Dockerfile  torchbench.Dockerfile
docs/dev/: env_vars.rst
examples/: README.md
examples/distributed/: README.md  log_utils.py  tensor_parallel.py
examples/dynamo/flux/: README.md  flux.py  requirements.txt
examples/dynamo/stable_diffusion/: README.md  readme.md  (+1 more)
examples/fx/: fx2mgx_example.ipynb  lowering_example.py  torchvision_example.py  torchvision_examples.py
examples/quantization/: README.md  ptq_resnet.py  quantization_tutorial.ipynb
py/: CMakeLists.txt  MANIFEST.in  pyproject.toml  requirements.txt  setup.py
py/torch_migraphx/: _C.py  __init__.py
py/torch_migraphx/csrc/: mgx_util.cpp  mgx_util.h  par_for.h  torch_migraphx_py.cpp
py/torch_migraphx/dynamo/: __init__.py  backends.py  lower_dynamo.py  utils.py
py/torch_migraphx/dynamo/passes/: const_fold.py  contiguous_outputs.py  fix_tensor_meta.py  freeze.py  freezing.py  partition.py  pass_manager.py  promote_types.py  remove_complex_ops.py  remove_empty_slice.py  remove_lowered_constants.py  remove_ops.py  rewrite_complex_ops.py  simplify_complex.py  utils.py
py/torch_migraphx/dynamo/passes/export/: input_aliasing.py
py/torch_migraphx/dynamo/quantization/: __init__.py  migraphx_quantizer.py  migraphx_quantizer_utils.py
py/torch_migraphx/fx/: __init__.py  converter_registry.py  fx2mgx.py  lower.py  lower_setting.py  mgx_module.py  observer.py  utils.py
py/torch_migraphx/fx/converters/: __init__.py  acc_ops_converters.py  aten_ops_converters.py  builtin_converters.py  module_converters.py  quant_ops_converters.py  utils.py
py/torch_migraphx/fx/passes/: graph_opts.py  lower_basic_pass.py  lower_pass_manager_builder.py  pass_utils.py  remove_duplicate_output_args.py
py/torch_migraphx/fx/quantization/: __init__.py  mgx_backend_config.py  mgx_qconfig.py
py/torch_migraphx/fx/tools/: mgx_benchmark.py  mgx_minimizer.py  mgx_onnx.py  mgx_splitter.py  timing_cache_utils.py
py/torch_migraphx/fx/tracer/acc_tracer/: __init__.py  acc_normalizer.py  acc_op_properties.py  acc_ops.py  acc_shape_prop.py  acc_tracer.py  acc_tracer_old.py  acc_utils.py
py/torch_migraphx/fx/tracer/aten_tracer/: __init__.py  aten_tracer.py
tests/: README.md  conftest.py  conftest.py.backup  fx_test_loss.py  mig_test.py  pytest.ini  test_loss.py
tools/: install_libtorch.sh  install_migraphx.sh  install_prereqs.sh
tools/perf/: benchmark_flux.py  benchmark_quantized.py  benchmark_torchvision.py  benchmark_wan.py  hi.csv  requirements.txt  run_torchvision_benchmarks.sh  utils.py
(+100 files in other folders)
